force-app/main/default/objects/ProgramVersion__c/ProgramVersion__c.object-meta.xml
<CustomObject>
    <label>Program Version</label>
    <nameField>
        <displayFormat>PV-{0000}</displayFormat>
        <label>Program Version Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>