force-app/main/default/objects/ProgramVersion__c/fields/Parent_Version__c.field-meta.xml
<CustomField>
    <fullName>Parent_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Version</label>
    <referenceTo>ProgramVersion__c</referenceTo>
    <relationshipLabel>Child Versions</relationshipLabel>
    <relationshipName>ChildVersions</relationshipName>
    <type>Lookup</type>
</CustomField>