force-app/main/default/objects/ProgramVersion__c/fields/Published_By__c.field-meta.xml
<CustomField>
    <fullName>Published_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Published By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Published Program Versions</relationshipLabel>
    <relationshipName>PublishedProgramVersions</relationshipName>
    <type>Lookup</type>
</CustomField>