force-app/main/default/objects/ProgramVersion__c/fields/Version_Number__c.field-meta.xml
<CustomField>
    <fullName>Version_Number__c</fullName>
    <label>Version Number</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>